--- a/src/app/modules/main/pages/home/components/app-nav-bar/app-nav-bar.component.html
+++ b/src/app/modules/main/pages/home/components/app-nav-bar/app-nav-bar.component.html
@@ -19,13 +19,13 @@
       <div class="offcanvas-body">
         <ul class="navbar-nav justify-content-evenly flex-grow-1 pe-3">
           <li class="nav-item">
-            <a class="nav-link" href="#">Salão de Imóveis</a>
+            <a class="nav-link" (click)="scrollToEstateHall()" style="cursor: pointer;">Salão de Imóveis</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Encontre um Imóvel</a>
+            <a class="nav-link" (click)="scrollToFindProperty()" style="cursor: pointer;">Encontre um Imóvel</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Parceiros</a>
+            <a class="nav-link" (click)="scrollToPartners()" style="cursor: pointer;">Parceiros</a>
           </li>
         </ul>
       </div>
