--- a/src/app/modules/main/pages/search-property/components/search-result/search-result.component.html
+++ b/src/app/modules/main/pages/search-property/components/search-result/search-result.component.html
@@ -33,7 +33,7 @@
 
           <div class="d-flex flex-row justify-content-between pb-2" style="height:22px;">
             <div class="d-flex align-items-center">
-              <img src="/assets/icons/homer.png">
+              <img src="/assets/icons/logo_homer.png">
               &nbsp;&nbsp;
               <p class="fs-5 fw-semibold pt-4">HOMER</p>
             </div>
