--- a/src/app/modules/main/pages/search-property/search-property.component.css
+++ b/src/app/modules/main/pages/search-property/search-property.component.css
@@ -3,7 +3,7 @@
 
 .first {
   height: auto;
-  min-height: 84vh;
+  min-height: 100vh;
 }
 
 .mobile {
@@ -31,6 +31,7 @@ input {
 
 select {
   border: none;
+  background-image: url("/assets/icons/arrow-down-black.png")
 }
 
 /* SECOND  */
@@ -49,7 +50,7 @@ select {
   background-color: #380f91;
   background-position: center; 
   background-repeat: no-repeat;
-  background-image: url("/assets/img/property_hall.png");
+  background-image: url("/assets/img/banner2_salaodeimoveis.png");
 }
 
 .event-card-right {
