--- a/src/app/modules/main/pages/simulate-investment/simulate-investment.component.html
+++ b/src/app/modules/main/pages/simulate-investment/simulate-investment.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex align-items-baseline justify-content-between p-3 w-100">
-  <a routerLink="/home/" style="font-size: 25px; color:#012942;">
+  <a routerLink="/" style="font-size: 25px; color:#012942;">
     <i class="fa fa-arrow-circle-left mb-4" aria-hidden="true"></i>
   </a>  
   <a class="navbar-brand" href="#">
